[package]
name = "oss_admin_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0-beta.10"
actix-web = "4"
actix-rt = "2.7.0"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = { version = "1.0" }
oss-rust-sdk  = { path = "oss-rust-sdk" }
tokio="1.28.2"
dotenv = "0.15.0"

[[bin]]
name = "service"